fixed failing tests, aligned attachment formatting

--- a/plugin-code/src/main/resources/template/css/cluecumber.css
+++ b/plugin-code/src/main/resources/template/css/cluecumber.css
@@ -9,7 +9,7 @@ http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
-                                                           WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 */
@@ -43,9 +43,17 @@ body {
     text-align: center;
 }
 
-.card, img {
+.embedding-content {
+    padding: .5rem;
+}
+
+.card {
     margin: 0 0 .5rem 0;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.19), 0 3px 3px rgba(0, 0, 0, 0.23);
+}
+
+.scenarioAttachment > div, .scenarioOutput > div {
+    border: 1px solid gray;
 }
 
 pre {
